--- a/proj1/src/index.html
+++ b/proj1/src/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="I learn html and css" />
 	<meta name="author" content="coolerr127" />
 	<title>My site</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,16 +31,16 @@
 	<h2><a name="01"></a>I</h2>
 	<p>
 		Once when I was six years old I saw a magnificent picture in a book,
-		called <i>True Stories from Nature</i>, about the primeval forest.
+		called <span class="italic">True Stories from Nature</ы>, about the primeval forest.
 		It was a picture of a boa constrictor in the act of swallowing an
 		animal. Here is a copy of the drawing.
 	</p>
 	<img class="center" alt="Boa" src="img/hroznys.jpeg" height="183" width="301" />
 	<p>
 		In the book it said:
-		<em>&quot;Boa constrictors swallow their prey whole, without
+		<span class="italic">&quot;Boa constrictors swallow their prey whole, without
 			chewing it. After that they are not able to move, and they sleep
-			through the six months that they need for digestion.&quot;</em>
+			through the six months that they need for digestion.&quot;</span>
 	</p>
 	<p>
 		I pondered deeply, then, over the adventures of the jungle. And
@@ -53,8 +54,8 @@
 	</p>
 	<p>
 		But they answered:
-		<em>&quot;Frighten? Why should any one be frightened by a
-			hat?&quot;</em>
+		<span class="italic">&quot;Frighten? Why should any one be frightened by a
+			hat?&quot;</span>
 	</p>
 	<p>
 		My drawing was not a picture of a hat. It was a picture of a boa
@@ -97,7 +98,7 @@
 		of true understanding. But, whoever it was, he, or she, would always
 		say:
 	</p>
-	<p><em>&quot;That is a hat.&quot;</em></p>
+	<p><span class="italic">&quot;That is a hat.&quot;</span></p>
 	<p>
 		Then I would never talk to that person about boa constrictors, or
 		primeval forests, or stars. I would bring myself down to his level.
@@ -122,9 +123,9 @@
 		amazement, at sunrise, when I was awakened by an odd little voice.
 		It said:
 	</p>
-	<p><em>&quot;If you please--draw me a sheep!&quot;</em></p>
-	<p><em>&quot;What''!&quot;</em></p>
-	<p><em>&quot;Draw me a sheep!&quot;</em></p>
+	<p><span class="italic">&quot;If you please--draw me a sheep!&quot;</span></p>
+	<p><span class="italic">&quot;What''!&quot;</span></p>
+	<p><span class="italic">&quot;Draw me a sheep!&quot;</span></p>
 	<p>
 		I jumped to my feet, completely thunderstruck. I blinked my eyes
 		hard. I looked carefully all around me. And I saw a most
@@ -150,12 +151,12 @@
 		desert, a thousand miles from any human habitation. When at last I
 		was able to speak, I said to him:
 	</p>
-	<p><em>&quot;But--what are you doing here?&quot;</em></p>
+	<p><span class="italic">&quot;But--what are you doing here?&quot;</span></p>
 	<p>
 		And in answer he repeated, very slowly, as if he were speaking of a
 		matter of great consequence:
 	</p>
-	<p><em>&quot;If you please--draw me a sheep...&quot;</em></p>
+	<p><span class="italic">&quot;If you please--draw me a sheep...&quot;</span></p>
 	<p>
 		When a mystery is too overpowering, one dare not disobey. Absurd as
 		it might seem to me, a thousand miles from any human habitation and
@@ -165,7 +166,7 @@
 		told the little chap (a little crossly, too) that I did not know how
 		to draw. He answered me:
 	</p>
-	<p><em>&quot;That doesn&#39;t matter. Draw me a sheep...&quot;</em></p>
+	<p><span class="italic">&quot;That doesn&#39;t matter. Draw me a sheep...&quot;</span></p>
 	<p>
 		But I had never drawn a sheep. So I drew for him one of the two
 		pictures I had drawn so often. It was that of the boa constrictor
@@ -173,31 +174,31 @@
 		greet it with:
 	</p>
 	<p>
-		<em>&quot;No, no, no! I do not want an elephant inside a boa
+		<span class="italic">&quot;No, no, no! I do not want an elephant inside a boa
 			constrictor. A boa constrictor is a very dangerous creature, and
 			an elephant is very cumbersome. Where I live, everything is very
-			small. What I need is a sheep. Draw me a sheep.&quot;</em>
+			small. What I need is a sheep. Draw me a sheep.&quot;</span>
 	</p>
 	<p>So then I made a drawing.</p>
 	<img class="center" alt="Sick sheep" src="img/nemocnyBeranek.jpeg" height="113" width="128" />
 	<p>He looked at it carefully, then he said:</p>
 	<p>
-		<em>&quot;No. This sheep is already very sickly. Make me
-			another.&quot;</em>
+		<span class="italic">&quot;No. This sheep is already very sickly. Make me
+			another.&quot;</span>
 	</p>
 	<p>So I made another drawing.</p>
 	<img alt="A ram." src="img/Beran.jpeg" class="center" height="119" width="126" />
 	<p>My friend smiled gently and indulgently.</p>
 	<p>
-		<em>&quot;You see yourself,&quot;</em> he said,
-		<em>&quot;that this is not a sheep. This is a ram. It has
-			horns.&quot;</em>
+		<span class="italic">&quot;You see yourself,&quot;</span> he said,
+		<span class="italic">&quot;that this is not a sheep. This is a ram. It has
+			horns.&quot;</span>
 	</p>
 	<p>So then I did my drawing over once more.</p>
 	<p>But it was rejected too, just like the others.</p>
 	<p>
-		<em>&quot;This one is too old. I want a sheep that will live a long
-			time.&quot;</em>
+		<span class="italic">&quot;This one is too old. I want a sheep that will live a long
+			time.&quot;</span>
 	</p>
 	<img alt="Old sheep" src="img/staryBeranek.jpeg" class="center" height="98" width="113" />
 	<p>
@@ -207,30 +208,30 @@
 	<img alt="Sheep in the box" src="img/krabice.jpeg" class="center" height="103" width="200" />
 	<p>And I threw out an explanation with it.</p>
 	<p>
-		<em>&quot;This is only his box. The sheep you asked for is
-			inside.&quot;</em>
+		<span class="italic">&quot;This is only his box. The sheep you asked for is
+			inside.&quot;</span>
 	</p>
 	<p>
 		I was very surprised to see a light break over the face of my young
 		judge:
 	</p>
 	<p>
-		<em>&quot;That is exactly the way I wanted it! Do you think that
-			this sheep will have to have a great deal of grass?&quot;</em>
+		<span class="italic">&quot;That is exactly the way I wanted it! Do you think that
+			this sheep will have to have a great deal of grass?&quot;</span>
 	</p>
-	<p><em>&quot;Why?&quot;</em></p>
+	<p><span class="italic">&quot;Why?&quot;</span></p>
 	<p>
-		<em>&quot;Because where I live everything is very
-			small...&quot;</em>
+		<span class="italic">&quot;Because where I live everything is very
+			small...&quot;</span>
 	</p>
 	<p>
-		<em>&quot;There will surely be enough grass for him,&quot; I said.
-			&quot;It is a very small sheep that I have given you.&quot;</em>
+		<span class="italic">&quot;There will surely be enough grass for him,&quot; I said.
+			&quot;It is a very small sheep that I have given you.&quot;</span>
 	</p>
 	<p>He bent his head over the drawing.</p>
 	<p>
-		<em>&quot;Not so small that--Look! He has gone to
-			sleep...&quot;</em>
+		<span class="italic">&quot;Not so small that--Look! He has gone to
+			sleep...&quot;</span>
 	</p>
 	<p>And that is how I made the acquaintance of the little prince.</p>
 	<hr />
