--- a/proj1/src/index.html
+++ b/proj1/src/index.html
@@ -1,240 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="I learn html and css" />
-	<meta name="author" content="coolerr127" />
-	<title>My site</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Wordpress интенсив</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<h1>Antoine de Saint Exupéry - The little prince</h1>
-	<p><a name="00"></a></p>
-	<p>TO LEON WERTH</p>
-	<p>
-		I ask the indulgence of the children who may read this book for
-		dedicating it to a grown-up. I have a serious reason: he is the best
-		friend I have in the world. I have another reason: this grown-up
-		understands everything, even books about children. I have a third
-		reason: he lives in France where he is hungry and cold. He needs
-		cheering up. If all these reasons are not enough, I will dedicate
-		the book to the child from whom this grown-up grew. All grown-ups
-		were once children - although few of them remember it. And so I
-		correct my dedication:
-	</p>
-	<p>TO LEON WERTH WHEN HE WAS A LITTLE BOY</p>
-	<hr />
-	<h2><a name="01"></a>I</h2>
-	<p>
-		Once when I was six years old I saw a magnificent picture in a book,
-		called <span class="italic">True Stories from Nature</ы>, about the primeval forest.
-		It was a picture of a boa constrictor in the act of swallowing an
-		animal. Here is a copy of the drawing.
-	</p>
-	<img class="center" alt="Boa" src="img/hroznys.jpeg" height="183" width="301" />
-	<p>
-		In the book it said:
-		<span class="italic">&quot;Boa constrictors swallow their prey whole, without
-			chewing it. After that they are not able to move, and they sleep
-			through the six months that they need for digestion.&quot;</span>
-	</p>
-	<p>
-		I pondered deeply, then, over the adventures of the jungle. And
-		after some work with a colored pencil I succeeded in making my first
-		drawing. My Drawing Number One. It looked something like this:
-	</p>
-	<img class="center" alt="Hat" src="img/klobouk.jpeg" height="80" width="241" />
-	<p>
-		I showed my masterpiece to the grown-ups, and asked them whether the
-		drawing frightened them.
-	</p>
-	<p>
-		But they answered:
-		<span class="italic">&quot;Frighten? Why should any one be frightened by a
-			hat?&quot;</span>
-	</p>
-	<p>
-		My drawing was not a picture of a hat. It was a picture of a boa
-		constrictor digesting an elephant. But since the grown-ups were not
-		able to understand it, I made another drawing: I drew the inside of
-		a boa constrictor, so that the grown-ups could see it clearly. They
-		always need to have things explained. My Drawing Number Two looked
-		like this:
-	</p>
-	<img class="center" alt="Elephant inside the boa" src="img/slon.jpeg" height="92" width="242" />
-	<p>
-		The grown-ups&#39; response, this time, was to advise me to lay
-		aside my drawings of boa constrictors, whether from the inside or
-		the outside, and devote myself instead to geography, history,
-		arithmetic, and grammar. That is why, at the age of six, I gave up
-		what might have been a magnificent career as a painter. I had been
-		disheartened by the failure of my Drawing Number One and my Drawing
-		Number Two. Grown-ups never understand anything by themselves, and
-		it is tiresome for children to be always and forever explaining
-		things to them.
-	</p>
-	<p>
-		So then I chose another profession, and learned to pilot airplanes.
-		I have flown a little over all parts of the world; and it is true
-		that geography has been very useful to me. At a glance I can
-		distinguish China from Arizona. If one gets lost in the night, such
-		knowledge is valuable.
-	</p>
-	<p>
-		In the course of this life I have had a great many encounters with a
-		great many people who have been concerned with matters of
-		consequence. I have lived a great deal among grown-ups. I have seen
-		them intimately, close at hand. And that hasn&#39;t much improved my
-		opinion of them.
-	</p>
-	<p>
-		Whenever I met one of them who seemed to me at all clear-sighted, I
-		tried the experiment of showing him my Drawing Number One, which I
-		have always kept. I would try to find out, so, if this was a person
-		of true understanding. But, whoever it was, he, or she, would always
-		say:
-	</p>
-	<p><span class="italic">&quot;That is a hat.&quot;</span></p>
-	<p>
-		Then I would never talk to that person about boa constrictors, or
-		primeval forests, or stars. I would bring myself down to his level.
-		I would talk to him about bridge, and golf, and politics, and
-		neckties. And the grown-up would be greatly pleased to have met such
-		a sensible man.
-	</p>
-	<hr />
-	<h><a name="02"></a>II</h>
-	<p>
-		So I lived my life alone, without anyone that I could really talk
-		to, until I had an accident with my plane in the Desert of Sahara,
-		six years ago. Something was broken in my engine. And as I had with
-		me neither a mechanic nor any passengers, I set myself to attempt
-		the difficult repairs all alone. It was a question of life or death
-		for me: I had scarcely enough drinking water to last a week.
-	</p>
-	<p>
-		The first night, then, I went to sleep on the sand, a thousand miles
-		from any human habitation. I was more isolated than a shipwrecked
-		sailor on a raft in the middle of the ocean. Thus you can imagine my
-		amazement, at sunrise, when I was awakened by an odd little voice.
-		It said:
-	</p>
-	<p><span class="italic">&quot;If you please--draw me a sheep!&quot;</span></p>
-	<p><span class="italic">&quot;What''!&quot;</span></p>
-	<p><span class="italic">&quot;Draw me a sheep!&quot;</span></p>
-	<p>
-		I jumped to my feet, completely thunderstruck. I blinked my eyes
-		hard. I looked carefully all around me. And I saw a most
-		extraordinary small person, who stood there examining me with great
-		seriousness. Here you may see the best portrait that, later, I was
-		able to make of him. But my drawing is certainly very much less
-		charming than its model.
-	</p>
-	<img class="center" alt="The Little prince" src="img/malyPrinc.jpeg" height="385" width="363" />
-	<p>
-		That, however, is not my fault. The grown-ups discouraged me in my
-		painter&#39;s career when I was six years old, and I never learned
-		to draw anything, except boas from the outside and boas from the
-		inside.
-	</p>
-	<p>
-		Now I stared at this sudden apparition with my eyes fairly starting
-		out of my head in astonishment. Remember, I had crashed in the
-		desert a thousand miles from any inhabited region. And yet my little
-		man seemed neither to be straying uncertainly among the sands, nor
-		to be fainting from fatigue or hunger or thirst or fear. Nothing
-		about him gave any suggestion of a child lost in the middle of the
-		desert, a thousand miles from any human habitation. When at last I
-		was able to speak, I said to him:
-	</p>
-	<p><span class="italic">&quot;But--what are you doing here?&quot;</span></p>
-	<p>
-		And in answer he repeated, very slowly, as if he were speaking of a
-		matter of great consequence:
-	</p>
-	<p><span class="italic">&quot;If you please--draw me a sheep...&quot;</span></p>
-	<p>
-		When a mystery is too overpowering, one dare not disobey. Absurd as
-		it might seem to me, a thousand miles from any human habitation and
-		in danger of death, I took out of my pocket a sheet of paper and my
-		fountain-pen. But then I remembered how my studies had been
-		concentrated on geography, history, arithmetic and grammar, and I
-		told the little chap (a little crossly, too) that I did not know how
-		to draw. He answered me:
-	</p>
-	<p><span class="italic">&quot;That doesn&#39;t matter. Draw me a sheep...&quot;</span></p>
-	<p>
-		But I had never drawn a sheep. So I drew for him one of the two
-		pictures I had drawn so often. It was that of the boa constrictor
-		from the outside. And I was astounded to hear the little fellow
-		greet it with:
-	</p>
-	<p>
-		<span class="italic">&quot;No, no, no! I do not want an elephant inside a boa
-			constrictor. A boa constrictor is a very dangerous creature, and
-			an elephant is very cumbersome. Where I live, everything is very
-			small. What I need is a sheep. Draw me a sheep.&quot;</span>
-	</p>
-	<p>So then I made a drawing.</p>
-	<img class="center" alt="Sick sheep" src="img/nemocnyBeranek.jpeg" height="113" width="128" />
-	<p>He looked at it carefully, then he said:</p>
-	<p>
-		<span class="italic">&quot;No. This sheep is already very sickly. Make me
-			another.&quot;</span>
-	</p>
-	<p>So I made another drawing.</p>
-	<img alt="A ram." src="img/Beran.jpeg" class="center" height="119" width="126" />
-	<p>My friend smiled gently and indulgently.</p>
-	<p>
-		<span class="italic">&quot;You see yourself,&quot;</span> he said,
-		<span class="italic">&quot;that this is not a sheep. This is a ram. It has
-			horns.&quot;</span>
-	</p>
-	<p>So then I did my drawing over once more.</p>
-	<p>But it was rejected too, just like the others.</p>
-	<p>
-		<span class="italic">&quot;This one is too old. I want a sheep that will live a long
-			time.&quot;</span>
-	</p>
-	<img alt="Old sheep" src="img/staryBeranek.jpeg" class="center" height="98" width="113" />
-	<p>
-		By this time my patience was exhausted, because I was in a hurry to
-		start taking my engine apart. So I tossed off this drawing.
-	</p>
-	<img alt="Sheep in the box" src="img/krabice.jpeg" class="center" height="103" width="200" />
-	<p>And I threw out an explanation with it.</p>
-	<p>
-		<span class="italic">&quot;This is only his box. The sheep you asked for is
-			inside.&quot;</span>
-	</p>
-	<p>
-		I was very surprised to see a light break over the face of my young
-		judge:
-	</p>
-	<p>
-		<span class="italic">&quot;That is exactly the way I wanted it! Do you think that
-			this sheep will have to have a great deal of grass?&quot;</span>
-	</p>
-	<p><span class="italic">&quot;Why?&quot;</span></p>
-	<p>
-		<span class="italic">&quot;Because where I live everything is very
-			small...&quot;</span>
-	</p>
-	<p>
-		<span class="italic">&quot;There will surely be enough grass for him,&quot; I said.
-			&quot;It is a very small sheep that I have given you.&quot;</span>
-	</p>
-	<p>He bent his head over the drawing.</p>
-	<p>
-		<span class="italic">&quot;Not so small that--Look! He has gone to
-			sleep...&quot;</span>
-	</p>
-	<p>And that is how I made the acquaintance of the little prince.</p>
-	<hr />
+	<section class="promo">
+		<div class="container">
+			<div class="logo">
+				<img src="icons/logo.png" alt="logo" class="logo_img">
+				<div class="logo_text">WordPress интенсив</div>
+			</div>
+
+			<h1 class="title">Создать свой сайт на WordPress </h1>
+			<div class="simple">
+				<h2 class="title_big">это просто!</h2>
+				<div class="line"></div>
+			</div>
+			<h2 class="title">Куда сложнее сделать это правильно!</h2>
+
+			<div class="promo_text">
+				Ежедневно в России появляется более 5 000 новых сайтов.<br>
+				И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула
+				успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
+			</div>
+
+			<button class="promo_btn">Записаться на интенсив!</button>
+
+			<div class="more">
+				<div class="more_text">узнать больше об интенсиве</div>
+				<img src="icons/down.png" alt="down" class="more_img">
+			</div>
+		</div>
+	</section>
+
+	<section class="waiting">
+		<div class="container">
+			<h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
+			<div class="waiting_divider"></div>
+			<div class="waiting_subheader">
+				2 бесплатных полноценных обучающих вебинара, где:
+			</div>
+			<div class="waiting_wrapper">
+				<div class="waiting_item">
+					<img src="img/waiting/waiting_1.png" alt="waiting_1" class="waiting_img">
+					<div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на
+						WordPress. </div>
+				</div>
+				<div class="waiting_item">
+					<img src="img/waiting/waiting_2.png" alt="waiting_2" class="waiting_img">
+					<div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным
+						для поисковых систем. Только свежая, профессиональная и актуальная информация!</div>
+				</div>
+				<div class="waiting_item">
+					<img src="img/waiting/waiting_3.png" alt="waiting_3" class="waiting_img">
+					<div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость»,
+						«стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
+						этих показателей!</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
