--- a/proj1/src/index.html
+++ b/proj1/src/index.html
@@ -125,6 +125,23 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="gift">
+		<div class="container">
+			<img class="gift_img" src="icons/gift.png" alt="gift">
+			<div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+			<button class="gift_btn">Записаться на интенсив!</button>
+		</div>
+	</section>
+
+	<section class="first">
+		<div class="container">
+			<img src="img/first.png" alt="first" class="first_img">
+			<div class="first_text">Первый вебинар состоится:</div>
+			<h2 class="date">10 сентября в 20:00 по Москве</h2>
+			
+		</div>
+	</section>
 </body>
 
 </html>
