--- a/proj1/src/index.html
+++ b/proj1/src/index.html
@@ -139,7 +139,7 @@
 			<img src="img/first.png" alt="first" class="first_img">
 			<div class="first_text">Первый вебинар состоится:</div>
 			<h2 class="date">10 сентября в 20:00 по Москве</h2>
-			
+			<div class="first_subtitle">Успейте записаться, количество мест ограничено!</div>
 		</div>
 	</section>
 </body>
