--- a/proj1/src/index.html
+++ b/proj1/src/index.html
@@ -129,7 +129,8 @@
 	<section class="gift">
 		<div class="container">
 			<img class="gift_img" src="icons/gift.png" alt="gift">
-			<div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+			<div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку
+				ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
 			<button class="gift_btn">Записаться на интенсив!</button>
 		</div>
 	</section>
@@ -142,6 +143,17 @@
 			<div class="first_subtitle">Успейте записаться, количество мест ограничено!</div>
 		</div>
 	</section>
+
+	<footer>
+		<div class="info">
+			<div class="info_links">
+				<a href="#" class="underlined">Служба поддержки</a>
+				|
+				<a href="#" class="underlined">Политика конфиденциальности</a>
+			</div>
+			Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a>
+		</div>
+	</footer>
 </body>
 
 </html>
