--- a/proj2_bootstrap/index.html
+++ b/proj2_bootstrap/index.html
@@ -136,13 +136,16 @@
 		<div id="carouselExampleControls" class="carousel slide mt-5 mb-5" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg" class="d-block w-100" alt="...">
+					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg"
+						class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg" class="d-block w-100" alt="...">
+					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg"
+						class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg" class="d-block w-100" alt="...">
+					<img src="https://i.pinimg.com/originals/8e/4e/8f/8e4e8f2edf8fd3166b5e05ffbf9ef152.jpg"
+						class="d-block w-100" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
